--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <th>Firstname</th>
         <th>Lastname</th>
         <th>Email</th>
+        <th>Phone</th>
       </tr>
     </thead>
     <tbody>
@@ -22,16 +23,19 @@
         <td>John</td>
         <td>Doe</td>
         <td>john@example.com</td>
+        <td>0775543228</td>
       </tr>
       <tr>
         <td>Mary</td>
         <td>Moe</td>
         <td>mary@example.com</td>
+        <td>0775543228m</td>
       </tr>
       <tr>
         <td>July</td>
         <td>Dooley</td>
         <td>july@example.com</td>
+        <td>bổ sung text</td>
       </tr>
     </tbody>
   </table>
